<resources>
    <string name="app_name" description="App name" maxwidth="-1">Wellness</string>
	<string name="alertdialog_find_user_data_message_title" description="Restore profile title" maxwidth="-1">User profile is found</string>
	<string name="alertdialog_find_user_data_message_content" description="Restore profile message" maxwidth="-1">A Wellness app\'s user profile already exists on this device. Continue the setup using existing profile?</string>
	<string name="daily_energy_detail_measurement" description="Message of Energy detail page" maxwidth="-1">Measured</string>
	<string name="daily_energy_detail_today" description="Message of Energy detail page" maxwidth="-1">today</string>
	<string name="setting_title" description="Action bar title of setting page." maxwidth="-1">Settings</string>
	<string name="setting_title_activity_goal" description="Title of setting page option." maxwidth="">Activity goal</string>
	<string name="setting_title_backup_restore" description="Title of setting page option." maxwidth="-1">Back up my data</string>
	<string name="setting_activity_tracking" description="Title of setting page option." maxwidth="-1">Activity tracking</string>
	<string name="setting_dialog_backup_restore_title" description="Backup dialog title." maxwidth="-1">Backup Services</string>
	<string name="setting_dialog_backup_restore_message" description="Backup dialog message." maxwidth="-1">Please enable backup services.</string>
	<string name="setting_idle_alarm_option_15mins" description="Idle alarm option." maxwidth="-1">Every 15 mins</string>
	<string name="setting_idle_alarm_option_30mins" description="Idle alarm option." maxwidth="-1">Every 30 mins</string>
	<string name="setting_idle_alarm_option_1hour" description="Idle alarm option." maxwidth="-1">Every 1 hour</string>
	<string name="setting_idle_alarm_option_1_5hours" description="Idle alarm option." maxwidth="-1">Every 1.5 hours</string>
	<string name="setting_idle_alarm_option_2hours" description="Idle alarm option." maxwidth="-1">Every 2 hours</string>
	<string name="setting_step_goal_include_bike_title" description="Include bike option." maxwidth="-1">Include bike activity</string>
	<string name="setting_step_goal_hint" description="Hint to remind user to input goal number." maxwidth="-1">Input activity goals number</string>
	<string name="step_counts_message_setting_goal" description="Step unit message of activity goal page." maxwidth="-1">steps / day</string>
	<string name="step_counts_message_preference" description="Option message of activity goal." maxwidth="-1">%s steps/day</string>
	<string name="step_counts_intensity_explain" description="Explanation message of step goal in activity goal page." maxwidth="-1">(%s steps / day)</string>
	<string name="set_new_profile_alarm_title" description="Alarm Dialog title of adding new profile." maxwidth="-1">Reset profile?</string>
	<string name="set_new_profile_btn_text" description="Button text of adding new profile." maxwidth="-1">Reset profile</string>
	<string name="set_new_profile_alarm_message" description="Alarm Dialog message of adding new profile." maxwidth="-1">Are you sure you want to replace your existing profile?</string>
	<string name="tutorial_measure_title" description="Tutorial title." maxwidth="-1">How to measure</string>
	<string name="set_profile_title" description="Title of setting profile page." maxwidth="">Setup your profile</string>
	<string name="profile_edittext_name_hint" description="Hint to request user to enter name." maxwidth="">Enter your name</string>
	<string name="profile_edittext_name_hint_alarm" description="Hint to request user to enter name." maxwidth="">Please enter your name</string>
	<string name="profile_gender_title" description="Profile title" maxwidth="">Gender</string>
	<string name="profile_age_title" description="Profile title" maxwidth="">"Age"</string>
	<string name="profile_gender_age_title" description="Profile title" maxwidth="">Gender/Age</string>
	<string name="profile_height_title" description="Profile title" maxwidth="">"Height"</string>
	<string name="profile_weight_title" description="Profile title" maxwidth="">"Weight"</string>
	<string name="drawer_title_about" description="Drawer Profile title" maxwidth="">"About"</string>
	<string name="drawer_title_status" description="Drawer Profile title" maxwidth="">"Status"</string>
	<string name="str_edit_profile" description="Button text of edit profile" maxwidth="">"Edit profile"</string>
	<string name="profile_start_measure_date" description="Drawer Profile title" maxwidth="">"Start measure date"</string>
	<string name="profile_total_steps" description="Drawer Profile title" maxwidth="">"Total steps"</string>
	<string name="none_data_inside" description="No data description" maxwidth="">"No data available"</string>
	<string name="detail_activity_time" description="Activity title of activity detail page" maxwidth="">"have been active for"</string>
	<string name="detail_total_steps" description="Total step title of activity detail page" maxwidth="">"have moved"</string>
	<string name="detail_calories_burned" description="Calories burned title of activity detail page" maxwidth="">"have burned"</string>
	<string name="heart_and_exercise_intensity" description="Heart rate title of activity detail page" maxwidth="">Heart rate and exercise intensity</string>
	<string name="time_unit" description="Time unit" maxwidth="">mins</string>
	<string name="distance_unit" description="Distance unit" maxwidth="">"km"</string>
	<string name="detail_energy_best_info_energy_level" description="Best energy text." maxwidth="">Highest:</string>
	<string name="detail_energy_worst_info_stress_level" description="Worst energy text." maxwidth="">Lowest:</string>
	<string name="count_time" description="The number of measurment" maxwidth="">times</string>
	<string name="not_connected_to_wellness" description="No connected device." maxwidth="">Your watch isn\'t connected to Wellness</string>
	<string-array name="profile_gender_option" description="Gender options" maxwidth="">
	    <item>Male</item>
	    <item>Female</item>
	</string-array>
	<string-array name="profile_weight_option" description="Weight options" maxwidth="">
	    <item>kg</item>
	    <item>lbs</item>
	</string-array>
	<string name="dialog_number_picker_done" description="Button text of number picker." maxwidth="-1">Done</string>
	<string name="dialog_number_picker_height_title" description="Title of setting height picker." maxwidth="-1">Set Height</string>
	<string name="dialog_number_picker_weight_title" description="Title of setting weight picker." maxwidth="-1">Set Weight</string>
	<string name="dialog_number_picker_age_title" description="Title of setting age picker." maxwidth="-1">Set Age</string>
	<string name="terms_services_title" description="Title of term service." maxwidth="-1">Terms of Use</string>
    <string name="terms_services_subtitle" description="subtitle of term service." maxwidth="-1">Important notice</string>
    <string name="terms_services_message" description="Message of term service." maxwidth="-1">This application is not intended for diagnostics or medical use. You can not use this app to treat, cure, or prevent any diseases nor can it be used for monitoring or treatment of any physical, mental or physiological conditions.\n\nYour wellness data (user profile, heart rate, stress, relaxation, physical activities and location info.) are stored within the Wellness app installed on your mobile device. Your wellness data are automatically backed up to Google servers if you enable your mobile device \"Backup &amp; reset\" in device\'s \"Settings\" with the backup account you set up.</string>
    <string name="terms_services_end_user_subtitle" description="subtitle of End user license agreement subtitle." maxwidth="-1">End user license agreement</string>
	<string name="last_updated" maxwidth="">Last updated</string>
    <string name="text_next" maxwidth="">Next</string>
    <string name="text_ok" maxwidth="">OK</string>
    <string name="tips_p1_text_title" maxwidth="">Tap here</string>
    <string name="tips_p1_text_content" maxwidth="">To view detail information</string>
    <string name="tips_p2_lefttext_title" maxwidth="">Tap here</string>
    <string name="tips_p2_lefttext_content" maxwidth="">To quickly go back to today</string>
    <string name="tips_p2_righttext_content" maxwidth="">To change the date</string>
    <string name="tips_p3_text_title" maxwidth="">Swipe up</string>
    <string name="tips_p3_text_content" maxwidth="">To see your activity timeline</string>
    <string name="about_dialog_legal_information">Legal Information</string>
    <string name="about_dialog_legal_information_des">Use this software is subject to terms and conditions on ASUS.</string>
    <string name="about_dialog_website">Website</string>
    <string name="about_dialog_allrights">ASUSTek Computer Inc. All rights reserved.</string>
    <string name="profile_birthday_title" description="Profile title" maxwidth="">"Birthday"</string>
    <string name="tips_p2_righttext_title_pad" maxwidth="">"Swipe from left to right"</string>
</resources>