<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.asus.wellness.ui.profile.DrawerUserHeadImageView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:id="@+id/profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView 
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
    	android:textColor="#ffffffff"
    	android:fontFamily="sans-serif-light"/>
    <TextView 
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
    	android:textColor="#ff8d8d8d"
    	android:fontFamily="sans-serif"
    	android:text="@string/drawer_title_about"/>
    <ImageView
       	android:layout_width="260dp"
        android:layout_height="1dp"
        android:background="#808080"/>
    <!-- age -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:layout_marginLeft="12dp"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/profile_about_item_height"
	        android:textSize="18sp"
	    	android:textColor="#ffffffff"
	    	android:fontFamily="sans-serif-light"
	    	android:text="@string/profile_birthday_title"/>
        <TextView 
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/profile_about_item_right_margin"
	        android:id="@+id/tv_age"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/profile_about_item_height"
	        android:textSize="18sp"
	    	android:textColor="#fff7f5f5"
	    	android:fontFamily="sans-serif"/>
    </RelativeLayout>
    <!-- gender -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:layout_marginLeft="12dp"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:textSize="18sp"
	    	android:textColor="#ffffffff"
	    	android:fontFamily="sans-serif-light"
	    	android:text="@string/profile_gender_title"/>
        <TextView 
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/profile_about_item_right_margin"
	        android:id="@+id/tv_gender"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/profile_about_item_height"
	        android:textSize="18sp"
	    	android:textColor="#fff7f5f5"
	    	android:fontFamily="sans-serif"/>
    </RelativeLayout>
    <!-- height -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:layout_marginLeft="12dp"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/profile_about_item_height"
	        android:textSize="18sp"
	    	android:textColor="#ffffffff"
	    	android:fontFamily="sans-serif-light"
	    	android:text="@string/profile_height_title"/>
        <TextView 
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/profile_about_item_right_margin"
	        android:id="@+id/tv_height"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/profile_about_item_height"
	        android:textSize="18sp"
	    	android:textColor="#fff7f5f5"
	    	android:fontFamily="sans-serif"/>
    </RelativeLayout>
    <!-- weight -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:layout_marginLeft="12dp"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/profile_about_item_height"
	        android:textSize="18sp"
	    	android:textColor="#ffffffff"
	    	android:fontFamily="sans-serif-light"
	    	android:text="@string/profile_weight_title"/>
        <TextView 
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/profile_about_item_right_margin"
	        android:id="@+id/tv_weight"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/profile_about_item_height"
	        android:textSize="18sp"
	    	android:textColor="#fff7f5f5"
	    	android:fontFamily="sans-serif"/>
    </RelativeLayout>

    <Button
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/asus_wellness_btn_edit"
        android:drawablePadding="3dp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/profile_about_item_height"
        android:onClick="editProfile"
        android:text="@string/str_edit_profile"
       	android:textSize="16sp"
		android:textColor="#fff7f5f5"
		android:background="#00000000"
		android:fontFamily="sans-serif"/>
    
    <!-- status -->
    <TextView 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
    	android:textColor="#ff8d8d8d"
    	android:fontFamily="sans-serif"
    	android:text="@string/drawer_title_status"/>
    <ImageView
       	android:layout_width="260dp"
        android:layout_height="1dp"
        android:background="#808080"/>
    <LinearLayout
    	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/profile_start_measure_date"
       		android:textSize="13sp"
    		android:textColor="#ffffffff"
    		android:fontFamily="sans-serif-light"/>
       	<TextView
       	    android:id="@+id/start_measure_date"
            android:layout_marginLeft="20dp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="2014/04/28"
        	android:textSize="18sp"
    		android:textColor="#ffffffff"
    		android:fontFamily="sans-serif"/>
   </LinearLayout>
   <LinearLayout
    	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/text_completion"
       		android:textSize="13sp"
    		android:textColor="#ffffffff"
    		android:fontFamily="sans-serif-light"/>
       	<TextView
       	    android:id="@+id/completion"
            android:layout_marginLeft="20dp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="0%"
        	android:textSize="18sp"
    		android:textColor="#ffffffff"
    		android:fontFamily="sans-serif"/>
   </LinearLayout>
   <LinearLayout
    	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/profile_total_steps"
       		android:textSize="13sp"
    		android:textColor="#ffffffff"
    		android:fontFamily="sans-serif-light"/>
       	<TextView
       	    android:id="@+id/total_steps"
            android:layout_marginLeft="20dp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="0"
        	android:textSize="18sp"
    		android:textColor="#ffffffff"
    		android:fontFamily="sans-serif"/>
   </LinearLayout>
   <LinearLayout
    	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       		android:textSize="13sp"
       		android:text="@string/last_updated"
    		android:textColor="#ffffffff"
    		android:fontFamily="sans-serif-light"/>
       	<TextView
       	    android:id="@+id/last_updated"
            android:layout_marginLeft="20dp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="--/--/-- --:--"
        	android:textSize="18sp"
    		android:textColor="#ffffffff"
    		android:fontFamily="sans-serif"/>
   </LinearLayout>
</LinearLayout>
