<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="13dp"
        android:paddingRight="13dp">

        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:singleLine="true"
            android:textColor="#282929"
            android:textSize="18dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:singleLine="true"
                android:textColor="#282929"
                android:textSize="18dp"
                android:text="@string/about_dialog_legal_information"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:singleLine="false"
                android:textColor="#6b6b6b"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/about_dialog_legal_information_des"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:singleLine="true"
                android:textColor="#282929"
                android:textSize="18dp"
                android:text="@string/about_dialog_website"/>

            <TextView
                android:id="@+id/websiteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:singleLine="false"
                android:textColor="#6b6b6b"
                android:textSize="15dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:singleLine="false"
                android:textColor="#848484"
                android:textSize="12dp"
                android:text="@string/about_dialog_allrights"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </LinearLayout>